[gd_scene load_steps=21 format=3 uid="uid://bvc6repdfk8sv"]

[ext_resource type="Script" uid="uid://dguoosbuc868t" path="res://Old/main_scene.gd" id="1_55kqp"]
[ext_resource type="Script" uid="uid://dldxhd4gptlhk" path="res://Old/settings_button.gd" id="3_i3yx1"]
[ext_resource type="Script" uid="uid://3qfjt480nc6w" path="res://Old/quit_program.gd" id="4_s05vd"]
[ext_resource type="Script" uid="uid://hfntc3gwio8a" path="res://Old/single_ip_button.gd" id="5_bvele"]
[ext_resource type="Script" uid="uid://joyutibke1kv" path="res://Old/single_url_button.gd" id="6_turvt"]
[ext_resource type="Script" uid="uid://cfy7i83wvl4b0" path="res://Old/network_lookup_button.gd" id="7_devmf"]
[ext_resource type="Script" uid="uid://bcc41fwye34i2" path="res://Old/multi_ip_button.gd" id="8_5d5em"]
[ext_resource type="Script" uid="uid://duhy0klrgk6k" path="res://Old/multi_url_button.gd" id="9_joapy"]
[ext_resource type="Script" uid="uid://cuv8gjnur7u5r" path="res://scripts/requestHandler.gd" id="10_h8n5f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twn0q"]
content_margin_left = 7.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
bg_color = Color(0, 0.572549, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w16ng"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.129558, 0.129559, 0.129558, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n1xb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jehqg"]
border_width_left = 100
border_width_top = 100
border_width_right = 100
border_width_bottom = 100
border_blend = true

[sub_resource type="Theme" id="Theme_ukskx"]
HBoxContainer/constants/separation = 5
VBoxContainer/styles/Style = SubResource("StyleBoxFlat_jehqg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jq6i"]
content_margin_top = 50.0
content_margin_bottom = 30.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_al2iq"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.0823529, 0.172549, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmtm4"]
content_margin_top = 50.0
content_margin_bottom = 30.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xypn"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.0823529, 0.172549, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fp4eh"]
bg_color = Color(0.0823529, 0.172549, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ha8th"]
bg_color = Color(0.0823529, 0.172549, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55kqp")

[node name="RootContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_twn0q")

[node name="VBoxContainer" type="VBoxContainer" parent="RootContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="RootContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_w16ng")

[node name="OutputDisplay" type="RichTextLabel" parent="RootContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 2
bbcode_enabled = true
text = "Welcome to the IP Lookup Tool!"

[node name="BottomPanel" type="PanelContainer" parent="RootContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="SettingsPanelContainer" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2n1xb")

[node name="SettingsPanel" type="VBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/SettingsPanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_ukskx")
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/SettingsPanelContainer/SettingsPanel"]
layout_mode = 2

[node name="ABLookupCount" type="Label" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/SettingsPanelContainer/SettingsPanel/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remaining Abuse IP DB Lookups: 
"
horizontal_alignment = 1

[node name="Settings Button" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/SettingsPanelContainer/SettingsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_ukskx")
text = "Settings Button"
script = ExtResource("3_i3yx1")

[node name="Quit Program" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/SettingsPanelContainer/SettingsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme = SubResource("Theme_ukskx")
text = "Quit Program
"
script = ExtResource("4_s05vd")

[node name="ButtonPanel" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2n1xb")

[node name="SingleLookupPanel" type="VBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_ukskx")
theme_override_constants/separation = 20
alignment = 1

[node name="SingleIP" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1jq6i")

[node name="SingleIpLookupBox" type="HBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleIP"]
layout_mode = 2
size_flags_vertical = 4

[node name="SingleIPText" type="TextEdit" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleIP/SingleIpLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8.8.8.8"

[node name="SingleIPButton" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleIP/SingleIpLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_al2iq")
text = "Execute Single IP
Lookup"
script = ExtResource("5_bvele")

[node name="SignleURL" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dmtm4")

[node name="SingleURLLookupBox2" type="HBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SignleURL"]
layout_mode = 2
size_flags_vertical = 0

[node name="SingleURLText" type="TextEdit" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SignleURL/SingleURLLookupBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "google.com"

[node name="SingleURLButton" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SignleURL/SingleURLLookupBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_1xypn")
text = "Execute Single 
URL Lookup"
script = ExtResource("6_turvt")

[node name="SingleReport" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="ReportLookupBox" type="HBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleReport"]
layout_mode = 2

[node name="ReportLookupText" type="TextEdit" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleReport/ReportLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8.8.8.8"

[node name="ReportLookupButton" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleReport/ReportLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Execute Report
Lookup"

[node name="SingleNetwork" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="NetworkLookupBox" type="HBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleNetwork"]
layout_mode = 2

[node name="NetworkLookupText" type="TextEdit" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleNetwork/NetworkLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8.8.8.8/24"

[node name="NetworkLookupButton" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/ButtonPanel/SingleLookupPanel/SingleNetwork/NetworkLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Execute Network
Range Lookup"
script = ExtResource("7_devmf")

[node name="MultiPanel" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2n1xb")

[node name="MultiIPPanel" type="VBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiPanel/MultiIPPanel"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Multi IP Lookup List Here:"
horizontal_alignment = 1

[node name="MultiIPText" type="TextEdit" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiPanel/MultiIPPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MultiIPButton" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiPanel/MultiIPPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_styles/normal = SubResource("StyleBoxFlat_fp4eh")
text = "Execute"
script = ExtResource("8_5d5em")

[node name="MultiUrlPanel" type="PanelContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2n1xb")

[node name="MultiURLPanel" type="VBoxContainer" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiUrlPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiUrlPanel/MultiURLPanel"]
layout_mode = 2
size_flags_stretch_ratio = 0.2
text = "Multi URL Lookup List Here:"
horizontal_alignment = 1

[node name="MultiURLText" type="TextEdit" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiUrlPanel/MultiURLPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MultiURLButton" type="Button" parent="RootContainer/VBoxContainer/BottomPanel/HBoxContainer/MultiUrlPanel/MultiURLPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ha8th")
text = "Execute"
script = ExtResource("9_joapy")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
script = ExtResource("10_h8n5f")
